# patricia_laurent_art

./: .gitignore  README.md  pyproject.toml
assets/calendar/: vernissage.ics
assets/css/: styles.css
assets/js/: lightbox.js
data/: oeuvres.json  press.json  site_config.json
data_archive_04_2026/: oeuvres.json  site_config.json
docs/: CNAME  index.html
docs/assets/css/: styles.css
docs/en/: index.html
docs/en/artworks/: Bobby.html  accordeon-orbe.html  accouchement.html  autoportrait.html  banc-poissons.html  beurriers.html  bouquet.html  caleton.html  charlequin.html  chat-peint.html  chateau.html  chats.html  chien.html  chihuahua.html  chouette.html  coeur.html  colonne.html  cri_silence.html  cri_suspendu.html  cuba-libre.html  dark-love.html  draqueen.html  eclosion.html  elegance.html  famille.html  fleurs-sechees.html  foret.html  fortuna.html  gina.html  groove.html  hiver.html  jeune-fille.html  kayla.html  lama.html  las-vegas.html  le-chat.html  le-pied.html  lev.html  lezard.html  logan.html  (+17 more)
docs/en/collection/: index.html
docs/en/press/: index.html
docs/fr/: index.html
docs/fr/collection/: index.html
docs/fr/oeuvres/: Bobby.html  accordeon-orbe.html  accouchement.html  autoportrait.html  banc-poissons.html  beurriers.html  bouquet.html  caleton.html  charlequin.html  chat-peint.html  chateau.html  chats.html  chien.html  chihuahua.html  chouette.html  coeur.html  colonne.html  cri_silence.html  cri_suspendu.html  cuba-libre.html  dark-love.html  draqueen.html  eclosion.html  elegance.html  famille.html  fleurs-sechees.html  foret.html  fortuna.html  gina.html  groove.html  hiver.html  jeune-fille.html  kayla.html  lama.html  las-vegas.html  le-chat.html  le-pied.html  lev.html  lezard.html  logan.html  (+17 more)
docs/fr/presse/: index.html
scripts/: generate_qr_pdf.py  generate_site.py  run_editor.py
site/: index.html
site/assets/js/: gallery.js  lightbox.js
site/en/: index.html
src/patricia_laurent_art/: content_manager.py  editor_app.py  image_service.py  models.py  settings.py  site_generator.py  storage.py
templates/: artwork_template.html  gallery_template.html  home_template.html  root_index_template.html
templates/components/: artwork_card.html  filters.html  footer.html  header.html
templates/editor/: artwork_form.html  base.html  dashboard.html  site_config_form.html
templates/public/: artwork_template.html  gallery_template.html  home_template.html  press_template.html  root_index_template.html
(+38 files in other folders)
