[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patricia-laurent-art"
version = "0.2.0"
description = "Bilingual static website generator and local editor for the Patricia Laurent art collection"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Michel Bierlaire" }
]
license = "MIT"
dependencies = [
  "Flask>=3.0",
  "Jinja2>=3.1",
  "qrcode[pil]>=7.4",
]
keywords = ["static-site", "art", "gallery", "jinja2", "qrcode", "flask"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP :: Site Management",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "ruff>=0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
